last change - add functions and so on

--- a/figuras.html
+++ b/figuras.html
@@ -9,9 +9,27 @@
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 </head>
 <body>
-  <h1>
-    Figuras Geómetricas
-  </h1>
+  <header>
+    <h1>
+      Figuras Geómetricas
+    </h1>
+    <p>Este es el primer taller del curso práctico de JavaScript</p>
+  </header>
+  <section>
+    <form action="">
+      <h2>Calcula el área y perímetro de un cuadrado</h2>
+      <label for="inputCuadrado">
+        Escribe cuanto mide cada lado de tu cuadrado:
+      </label>
+      <input id="inputCuadrado" type="number">
+      <button type="button">
+        Calcular el perímetro
+      </button>
+      <button type="button">
+        Calcular el área
+      </button>
+    </form>
+  </section>    
 
 
 
